@@ -71,7 +71,7 @@ extern void do_dump(dbref player, char *num, enum dump_type flag);
 enum shutdown_type { SHUT_NORMAL, SHUT_PANIC, SHUT_PARANOID };
 extern void do_shutdown(dbref player, enum shutdown_type panic_flag);
 extern void do_dolist(dbref executor, char *list, char *command,
-                      dbref enactor, unsigned int flags, MQUE *queue_entry);
+                      dbref enactor, unsigned int flags, MQUE *queue_entry, int queue_type);
 
 
 /* From look.c */
